apps/service-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b-service
spec:
  type: ClusterIP
  selector:
    app: app-b
  ports:
    - port: 80
      targetPort: 5000
